# ros2_demo

./: .gitignore  README.md
docker/: Makefile  README.md  build  docker_utils.py  run
docker/ros_foxy/: Dockerfile
docker/ubuntu_bionic/: Dockerfile
docker/ubuntu_bionic_focal/: Dockerfile
docker/ubuntu_bionic_nvidia/: Dockerfile
src/goal_controller/: CMakeLists.txt  package.xml
src/goal_controller/launch/: demo.launch.py  server.launch.py
src/goal_controller/src/: goal_controller_action_server.cpp
src/goal_controller_client/: package.xml  setup.cfg  setup.py
src/goal_controller_client/goal_controller_client/: goal_controller_client.py
src/goal_controller_client/launch/: client.launch.py
src/goal_controller_client/qt_ui/: demo.ui
src/goal_controller_client/resource/install/: local_setup.sh  setup.sh
src/goal_controller_client/resource/log/: latest_build
src/knapp_amr/: CMakeLists.txt  package.xml
src/knapp_amr/include/knapp_amr/: ConfigurationFile.hpp  KnappTypes.hpp  OrderFinder.hpp  OrderOptimizer.hpp
src/knapp_amr/include/knapp_amr/pathFinder/: PathFinderInterface.hpp
src/knapp_amr/include/knapp_amr/pathFinder/travelSalesman/: PathFinderTSP.hpp  README.md  algorithms.h  city.h  tree.h
src/knapp_amr/launch/: demo.launch.py
src/knapp_amr/src/: OrderFinder.cpp  OrderOptimizer.cpp  OrderOptimizerRunner.cpp
src/knapp_amr/src/pathFinder/travelSalesman/: algorithms.cpp  city.cpp  tree.cpp
src/knapp_amr/test/unit_test/: ConfigurationFileTest.cpp  OrderFinderTest.cpp
src/knapp_interfaces/: CMakeLists.txt  package.xml
src/ros_demo_interfaces/: CMakeLists.txt  package.xml
src/ros_demo_interfaces/action/: MoveRobot.action
