<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>knapp_amr</name>
  <version>0.0.1</version>
  <description>Package that solves the Knapp challenge</description>
  <maintainer email="cervetti.g@gmail.com">Gonzalo cervetti</maintainer>
  <license>Privative</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>catkin</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>knapp_interfaces</build_depend>
  <build_depend>visualization_msgs</build_depend>


  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
